# miniadas

./: .gitignore  README.md  bisenetv2_carla_best.pth
install/: local_setup.sh  setup.bash  setup.sh
install/percep_plan/share/percep_plan/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/plotly_ros/lib/plotly_ros/: combined_plotly_dashboard  final_pid  final_pid = plotly_ros.final_pid:maincombined_plotly_dashboard  trajectory_publisher
install/plotly_ros/share/plotly_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/plotly_ros/share/plotly_ros/launch/: trajectorypublisher_finalpid_launch.py
install/virtual_vehicle_control/share/virtual_vehicle_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/percep_plan/: Software_Requirement.md  package.xml  setup.cfg  setup.py
src/percep_plan/percep_plan/: bisenetv2_perception.py  make_mask_visible.py  road_only_perception.py  save_camera_frame.py  train_bisenetv2.py  train_bisenetv2_fast.py  yolo_perception.py
src/plotly_ros/: Complete_Requirement.md  Software_Requirements.md  buffer.py  package.xml  setup.cfg  setup.py
src/plotly_ros/launch/: trajectorypublisher_finalpid_launch.py
src/plotly_ros/plotjuggler_layout/: pos_gnss_vel_carla_layout.xml
src/plotly_ros/plotly_ros/: carla_doit.py  carla_odom_dash.py  carla_odometry_msg.py  combined_plotly_dashboard.py  combined_plotly_plot.py  compare_pid_vs_trajectory_plot.py  csv_plotly_dashboard.py  error_analysis_dashboard.py  final_pid.py  longitudinal_speed_matching_pid.py  longitudinal_trajectory_control_pid.py  odometry_x_position.csv  pid_ros2_node.py  pid_trajectory_log_plot.py  plot_log_file.py  plot_odometry_x_pos_and_vel_vs_time.py  plot_odometry_x_position_vs_time.py  plotly_tutorial.ipynb  pure_pursuit_controller.py  python_pid.py  ros2_bag_to_csv_final.py  ros2bag_to_csv  ros2bag_to_csv.py  trajectory_publisher.py
src/plotly_ros/plotly_ros/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/plotly_ros/plotly_ros/log/: latest_build
src/plotly_ros/plotly_ros/rosbag2_2025_07_11-17_44_00/: metadata.yaml  rosbag2_2025_07_11-17_44_00_0.db3
src/virtual_vehicle_control/: package.xml  setup.cfg  setup.py
src/virtual_vehicle_control/virtual_vehicle_control/webpage_ws/controller_app/: settings.gradle.kts
(+18 files in other folders)
