<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plotly_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yash.panthri05@gmail.com">yashpanthri-unbuntu22</maintainer>
  <license>TODO: License declaration</license>

  <!-- <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>plotly</depend>
  <depend>pandas</depend>
  <depend>rosbag2_py</depend>
  <depend>ros_numpy</depend>
  <depend>dash</depend> -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag2_py</depend>
  <depend>ros_numpy</depend>
  <depend>carla_msgs</depend>

  
  <exec_depend>dash</exec_depend>
  <exec_depend>plotly</exec_depend>
  <exec_depend>pandas</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>opencv-python</exec_depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
